Fix find-section: fixed icon styles on mobile devices

--- a/src/components/common/Label/Label.module.scss
+++ b/src/components/common/Label/Label.module.scss
@@ -58,8 +58,8 @@
 		transition: opacity 0.3s ease;
 
 		@include mixins.mobile {
-			width: 10px;
-			height: 10px;
+			width: 6px;
+			height: 6px;
 			top: 5px;
 			left: 5px;
 		}
