--- a/src/components/common/Select/Select.module.scss
+++ b/src/components/common/Select/Select.module.scss
@@ -34,7 +34,7 @@
 	z-index: 5;
 
 	@include mixins.mobile {
-		top: 10px;
+		top: 15px;
 		right: 14px;
 	}
 }
